Made more things look nicer

--- a/source/NCX-Core-Lite/0.X/index.html
+++ b/source/NCX-Core-Lite/0.X/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <title>NCX Programming Source Site</title>
 <link rel="icon" type="image/png" href="/src/icon.png"/>
-<h1>Index of /source/NCX-Core-Lite/0.X</h1>
+<h1>List of sources for NCX-Core-Lite v0</h1>
 <p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
 <hr>
-<h4><a href=/src/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>v0.1</a> (Never officially released, does not contain binaries)</h4>
+<h4><a href=/src/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>NCX-Core-Lite-v0.1.zip</a> (Never officially released, does not contain binaries)</h4>
 <hr>
