Added to NCX-Core-Lite page, added fake-apt page

--- a/source/NCX-Core-Lite/0.X/index.html
+++ b/source/NCX-Core-Lite/0.X/index.html
@@ -3,6 +3,9 @@
 <link rel="icon" type="image/png" href="/src/icon.png"/>
 <h1>List of sources for NCX-Core-Lite v0</h1>
 <p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
+<p><a href=/src/source/NCX-Core-Lite><- Back</a></p>
 <hr>
-<h4><a href=/src/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>NCX-Core-Lite-v0.1.zip</a> (Never officially released, does not contain binaries)</h4>
+<h4>v0.1 - <a href=/src/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>NCX-Core-Lite-v0.1.zip</a> | Binaries (Never officially released, binaries unavailable)</h4>
+<hr>
+<h4>v0.2 - <a href=/src/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.2.zip>NCX-Core-Lite-v0.2.zip</a> | Binaries (Never officially released, binaries unavailable)</h4>
 <hr>
