--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@
 <hr>
 <h4><a href=/src/source/NCX-Core-Lite>NCX-Core-Lite</a> - Source available starting with v0.1</h4>
 <hr>
+<h4><a href=/src/source/theVaultC/all>theVaultC</a> - Source available starting with R1</h4>
+<hr>
