--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <title>NCX Programming Source Site</title>
 <link rel="icon" type="image/png" href="/src/icon.png"/>
+<meta property="og:title" content="NCX Programming Source Site">
+<meta property="og:locale" content="en_US">
+<meta name="description" content="NCX Programming Official Source Site">
+<meta property="og:description" content="NCX-Programming Official Source Site">
+<link rel="canonical" href="https://ncx-programming.github.io/src">
+<meta property="og:url" content="https://ncx-programming.github.io/src">
+<meta property="og:site_name" content="NCX Programming Source Site">
+<meta property="og:image" content="https://ncx-programming.github.io/src/icon.png">
 <h1>Welcome to the NCX Programming source storage site.</h1>
 <p>Source code is available for the following programs:</p>
 <hr>
