Added meta tags for embed to all pages

--- a/source/fake-apt/all/index.html
+++ b/source/fake-apt/all/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <title>NCX Programming Source Site</title>
 <link rel="icon" type="image/png" href="/src/icon.png"/>
+<meta property="og:title" content="NCX Programming">
+<meta property="og:locale" content="en_US">
+<meta name="description" content="NCX Programming's Official Source Site">
+<meta property="og:description" content="NCX Programming's Official Source Site">
+<link rel="canonical" href="https://ncx-programming.github.io/src">
+<meta property="og:url" content="https://ncx-programming.github.io/src">
+<meta property="og:site_name" content="NCX Programming Source Site">
+<meta property="og:image" content="https://ncx-programming.github.io/src/icon.png">
 <h1>List of sources for fake-apt</h1>
 <p>Since fake-apt doesn't get proper releases, these are the sources for milestone commits</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
