--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta property="og:title" content="NCX Programming">
 <meta property="og:locale" content="en_US">
 <meta name="description" content="NCX Programming's Official Source Site">
-<meta property="og:description" content="NCX-Programming's Official Source Site">
+<meta property="og:description" content="NCX Programming's Official Source Site">
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
