--- a/source/NCX-Core-Lite/0.X/index.html
+++ b/source/NCX-Core-Lite/0.X/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <title>NCX Programming Source Site</title>
 <link rel="icon" type="image/png" href="/src/icon.png"/>
+<meta property="og:title" content="NCX Programming">
+<meta property="og:locale" content="en_US">
+<meta name="description" content="NCX Programming's Official Source Site">
+<meta property="og:description" content="NCX Programming's Official Source Site">
+<link rel="canonical" href="https://ncx-programming.github.io/src">
+<meta property="og:url" content="https://ncx-programming.github.io/src">
+<meta property="og:site_name" content="NCX Programming Source Site">
+<meta property="og:image" content="https://ncx-programming.github.io/src/icon.png">
 <h1>List of sources for NCX-Core-Lite v0</h1>
 <p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
 <p><a href=/src/source/NCX-Core-Lite><- Back</a></p>
