--- a/source/theVaultC/index.html
+++ b/source/theVaultC/index.html
@@ -1,1 +1,9 @@
+<meta property="og:title" content="NCX Programming">
+<meta property="og:locale" content="en_US">
+<meta name="description" content="NCX Programming's Official Source Site">
+<meta property="og:description" content="NCX Programming's Official Source Site">
+<link rel="canonical" href="https://ncx-programming.github.io/src">
+<meta property="og:url" content="https://ncx-programming.github.io/src">
+<meta property="og:site_name" content="NCX Programming Source Site">
+<meta property="og:image" content="https://ncx-programming.github.io/src/icon.png">
 <p>i- wha- how did you get here</p>
