Adjusted links to work with domain

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>NCX Programming Source Site</title>
-<link rel="icon" type="image/png" href="/src/icon.png"/>
+<link rel="icon" type="image/png" href="/icon.png"/>
 <meta property="og:title" content="NCX Programming">
 <meta property="og:locale" content="en_US">
 <meta name="description" content="NCX Programming's Official Source Site">
@@ -8,13 +8,13 @@
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncx-programming.github.io/src/icon.png">
+<meta property="og:image" content="https://ncx-programming.github.io/icon.png">
 <h1>Welcome to the NCX Programming source storage site.</h1>
 <p>Source code is available for the following programs:</p>
 <hr>
-<h4><a href=/src/source/fake-apt/all>fake-apt</a> - Source available for all major commits</h4>
+<h4><a href=/source/fake-apt/all>fake-apt</a> - Source available for all major commits</h4>
 <hr>
-<h4><a href=/src/source/NCX-Core-Lite>NCX-Core-Lite</a> - Source available starting with v0.1</h4>
+<h4><a href=/source/NCX-Core-Lite>NCX-Core-Lite</a> - Source available starting with v0.1</h4>
 <hr>
-<h4><a href=/src/source/theVaultC/all>theVaultC</a> - Source available starting with R1</h4>
+<h4><a href=/source/theVaultC/all>theVaultC</a> - Source available starting with R1</h4>
 <hr>
