--- a/source/NCX-Core-Lite/index.html
+++ b/source/NCX-Core-Lite/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>NCX Programming Source Site</title>
-<link rel="icon" type="image/png" href="/src/icon.png"/>
+<link rel="icon" type="image/png" href="/icon.png"/>
 <meta property="og:title" content="NCX Programming">
 <meta property="og:locale" content="en_US">
 <meta name="description" content="NCX Programming's Official Source Site">
@@ -8,9 +8,9 @@
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncx-programming.github.io/src/icon.png">
+<meta property="og:image" content="https://ncx-programming.github.io/icon.png">
 <h1>Version groups for NCX-Core-Lite</h1>
 <p><a href=/src><- Back</a></p>
 <hr>
-<h4><a href=/src/source/NCX-Core-Lite/0.X>v0.X</a> (Versions starting with 0)</h4>
+<h4><a href=/source/NCX-Core-Lite/0.X>v0.X</a> (Versions starting with 0)</h4>
 <hr>
