--- a/source/fake-apt/all/index.html
+++ b/source/fake-apt/all/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>NCX Programming Source Site</title>
-<link rel="icon" type="image/png" href="/src/icon.png"/>
+<link rel="icon" type="image/png" href="/icon.png"/>
 <meta property="og:title" content="NCX Programming">
 <meta property="og:locale" content="en_US">
 <meta name="description" content="NCX Programming's Official Source Site">
@@ -8,17 +8,17 @@
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncx-programming.github.io/src/icon.png">
+<meta property="og:image" content="https://ncx-programming.github.io/icon.png">
 <h1>List of sources for fake-apt</h1>
 <p>Since fake-apt doesn't get proper releases, these are the sources for milestone commits</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
 <p><a href=/src><- Back</a></p>
 <hr>
-<h4>2020-12-15 - v841b13b/v1.0 - <a href=/src/source/fake-apt/all/fake-apt-v841b13b.zip>fake-apt-v841b13b.zip</a> | <a href=/src/source/fake-apt/all/fake-apt-release-v1.0.zip>Binaries</a> [W] (Released as v1.0)</h4>
+<h4>2020-12-15 - v841b13b/v1.0 - <a href=/source/fake-apt/all/fake-apt-v841b13b.zip>fake-apt-v841b13b.zip</a> | <a href=/source/fake-apt/all/fake-apt-release-v1.0.zip>Binaries</a> [W] (Released as v1.0)</h4>
 <hr>
-<h4>2021-01-31 - v9dd308d - <a href=/src/source/fake-apt/all/fake-apt-v9dd308d.zip>fake-apt-v9dd308d.zip</a> | Binaries [W] (Never officially released, binaries unavailable)</h4>
+<h4>2021-01-31 - v9dd308d - <a href=/source/fake-apt/all/fake-apt-v9dd308d.zip>fake-apt-v9dd308d.zip</a> | Binaries [W] (Never officially released, binaries unavailable)</h4>
 <hr>
-<h4>2021-03-12 - va1135ac - <a href=/src/source/fake-apt/all/fake-apt-va1135ac.zip>fake-apt-va1135ac.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
+<h4>2021-03-12 - va1135ac - <a href=/source/fake-apt/all/fake-apt-va1135ac.zip>fake-apt-va1135ac.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
 <hr>
-<h4>2021-04-04 - v9bbc032 - <a href=/src/source/fake-apt/all/fake-apt-v9bbc032.zip>fake-apt-v9bbc032.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
+<h4>2021-04-04 - v9bbc032 - <a href=/source/fake-apt/all/fake-apt-v9bbc032.zip>fake-apt-v9bbc032.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
 <hr>
