Fixed broken back buttons

--- a/source/NCX-Core-Lite/index.html
+++ b/source/NCX-Core-Lite/index.html
@@ -10,7 +10,7 @@
 <meta property="og:site_name" content="NCX Programming Source Site">
 <meta property="og:image" content="https://ncx-programming.github.io/icon.png">
 <h1>Version groups for NCX-Core-Lite</h1>
-<p><a href=/src><- Back</a></p>
+<p><a href="/"><- Back</a></p>
 <hr>
 <h4><a href=/source/NCX-Core-Lite/0.X>v0.X</a> (Versions starting with 0)</h4>
 <hr>
