--- a/source/theVaultC/all/index.html
+++ b/source/theVaultC/all/index.html
@@ -12,7 +12,7 @@
 <h1>List of sources for fake-apt</h1>
 <p>Since theVaultC doesn't have normal version numbers, these are the sources that correspond with releases. A version.txt file is included that says what versions of theVaultC programs the source is for.</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/src><- Back</a></p>
+<p><a href="/"><- Back</a></p>
 <hr>
 <h4>2021-02-24 - Release 1 - <a href=/source/theVaultC/all/theVaultC-r1-source.zip>theVaultC-r1-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r1-bin.zip>Binaries</a> [L] [W] (Released as Release 1)</h4>
 <hr>
