--- a/source/theVaultC/all/index.html
+++ b/source/theVaultC/all/index.html
@@ -8,7 +8,7 @@
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncx-programming.github.io/icon.png">
+<meta property="og:image" content="https://ncxprogramming.com/icon.png">
 <h1>List of sources for fake-apt</h1>
 <p>Since theVaultC doesn't have normal version numbers, these are the sources that correspond with releases. A version.txt file is included that says what versions of theVaultC programs the source is for.</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
