Fixed all remaining link problems (in theory)

--- a/source/NCX-Core-Lite/0.X/index.html
+++ b/source/NCX-Core-Lite/0.X/index.html
@@ -8,7 +8,7 @@
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncx-programming.github.io/icon.png">
+<meta property="og:image" content="https://ncxprogramming.com/icon.png">
 <h1>List of sources for NCX-Core-Lite v0</h1>
 <p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
