--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncx-programming.github.io/icon.png">
+<meta property="og:image" content="https://ncxprogramming.com/icon.png">
 <h1>Welcome to the NCX Programming source storage site.</h1>
 <p>Source code is available for the following programs:</p>
 <hr>
