--- a/source/theVaultC/index.html
+++ b/source/theVaultC/index.html
@@ -5,5 +5,5 @@
 <link rel="canonical" href="https://ncx-programming.github.io/src">
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncx-programming.github.io/icon.png">
+<meta property="og:image" content="https://ncxprogramming.com/icon.png">
 <p>i- wha- how did you get here</p>
