Added binaries for fake-apt v1.1

--- a/source/fake-apt/all/index.html
+++ b/source/fake-apt/all/index.html
@@ -20,5 +20,5 @@
 <hr>
 <h4>2021-03-12 - va1135ac - <a href=/source/fake-apt/all/fake-apt-va1135ac.zip>fake-apt-va1135ac.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
 <hr>
-<h4>2021-04-04 - v9bbc032 - <a href=/source/fake-apt/all/fake-apt-v9bbc032.zip>fake-apt-v9bbc032.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
+<h4>2021-04-04 - v9bbc032/v1.1 - <a href=/source/fake-apt/all/fake-apt-v9bbc032.zip>fake-apt-v9bbc032.zip</a> | <a href=/source/fake-apt/all/fake-apt-release-v1.1.zip>Binaries</a> [M] [L] (Released as v1.1)</h4>
 <hr>
