Added NCX-Core v1.X sources

--- a/source/NCX-Core/index.html
+++ b/source/NCX-Core/index.html
@@ -9,14 +9,12 @@
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
 <meta property="og:image" content="https://ncxprogramming.com/icon.png">
-<h1>Welcome to the NCX Programming source storage site.</h1>
-<p>Source code is available for the following programs:</p>
+<h1>Version groups for NCX-Core</h1>
+<p><a href="/"><- Back</a></p>
 <hr>
-<h4><a href=/source/fake-apt/all>fake-apt</a> - Source available for all major commits</h4>
+<h4><a href=/source/NCX-Core/1.X>v1.X</a> (Versions starting with 1)</h4>
 <hr>
-<h4><a href=/source/NCX-Core>NCX-Core</a> - Source available starting with v1.0</h4>
+<h4><a href=/source/NCX-Core/2.X>v2.X</a> (Versions starting with 2)</h4>
 <hr>
-<h4><a href=/source/NCX-Core-Lite>NCX-Core-Lite</a> - Source available starting with v0.1</h4>
-<hr>
-<h4><a href=/source/theVaultC/all>theVaultC</a> - Source available starting with R1</h4>
+<h4><a href=/source/NCX-Core/3.X>v3.X</a> (Versions starting with 3)</h4>
 <hr>
