Added trailing slashes to hopefully fix some links

--- a/source/NCX-Core/1.X/index.html
+++ b/source/NCX-Core/1.X/index.html
@@ -26,5 +26,5 @@
 <hr>
 <h4>2020-06-24 - v1.5 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.5.zip>NCX-Core-v1.5.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.5.msi>Binaries</a> [W] (Released as v1.5)</h4>
 <hr>
-<h4>End of 1.X Releases. <a href=/source/NCX-Core/2.X>View 2.X releases</a>.</h4>
+<h4>End of 1.X Releases. <a href=/source/NCX-Core/2.X/>View 2.X releases</a>.</h4>
 <hr>
