--- a/source/NCX-Core/2.X/index.html
+++ b/source/NCX-Core/2.X/index.html
@@ -42,5 +42,5 @@
 <hr>
 <h4>2020-08-20 - v2.9 - <a href=/source/NCX-Core/2.X/NCX-Core-v2.9.zip>NCX-Core-v2.9.zip</a> | <a href=/source/NCX-Core/2.X/NCX-Core-Setup-v2.9.zip>Binaries</a> [W] (Released as v2.9)</h4>
 <hr>
-<h4>End of 2.X Releases. <a href=/source/NCX-Core/3.X>View 3.X releases</a>.</h4>
+<h4>End of 2.X Releases. <a href=/source/NCX-Core/3.X/>View 3.X releases</a>.</h4>
 <hr>
