--- a/source/NCX-Core/index.html
+++ b/source/NCX-Core/index.html
@@ -12,9 +12,9 @@
 <h1>Version groups for NCX-Core</h1>
 <p><a href="/"><- Back</a></p>
 <hr>
-<h4><a href=/source/NCX-Core/1.X>v1.X</a> (Versions starting with 1)</h4>
+<h4><a href=/source/NCX-Core/1.X/>v1.X</a> (Versions starting with 1)</h4>
 <hr>
-<h4><a href=/source/NCX-Core/2.X>v2.X</a> (Versions starting with 2)</h4>
+<h4><a href=/source/NCX-Core/2.X/>v2.X</a> (Versions starting with 2)</h4>
 <hr>
-<h4><a href=/source/NCX-Core/3.X>v3.X</a> (Versions starting with 3)</h4>
+<h4><a href=/source/NCX-Core/3.X/>v3.X</a> (Versions starting with 3)</h4>
 <hr>
