Changed <- to &lt;- to avoid issues

--- a/source/NCX-Core-Lite/0.X/index.html
+++ b/source/NCX-Core-Lite/0.X/index.html
@@ -12,7 +12,7 @@
 <h1>List of sources for NCX-Core-Lite v0</h1>
 <p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/source/NCX-Core-Lite><- Back</a></p>
+<p><a href=/source/NCX-Core-Lite>&lt;- Back</a></p>
 <hr>
 <h4>2021-03-06 - v0.1 - <a href=/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>NCX-Core-Lite-v0.1.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
 <hr>
