--- a/source/NCX-Core/index.html
+++ b/source/NCX-Core/index.html
@@ -10,7 +10,7 @@
 <meta property="og:site_name" content="NCX Programming Source Site">
 <meta property="og:image" content="https://ncxprogramming.com/icon.png">
 <h1>Version groups for NCX-Core</h1>
-<p><a href="/"><- Back</a></p>
+<p><a href="/">&lt;- Back</a></p>
 <hr>
 <h4><a href=/source/NCX-Core/1.X/>v1.X</a> (Versions starting with 1)</h4>
 <hr>
