--- a/source/fake-apt/all/index.html
+++ b/source/fake-apt/all/index.html
@@ -12,7 +12,7 @@
 <h1>List of sources for fake-apt</h1>
 <p>Since fake-apt doesn't get proper releases, these are the sources for milestone commits</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href="/"><- Back</a></p>
+<p><a href="/">&lt;- Back</a></p>
 <hr>
 <h4>2020-12-15 - v841b13b/v1.0 - <a href=/source/fake-apt/all/fake-apt-v841b13b.zip>fake-apt-v841b13b.zip</a> | <a href=/source/fake-apt/all/fake-apt-release-v1.0.zip>Binaries</a> [W] (Released as v1.0)</h4>
 <hr>
