--- a/source/NCX-Core/1.X/index.html
+++ b/source/NCX-Core/1.X/index.html
@@ -12,7 +12,7 @@
 <h1>List of sources for NCX-Core v1</h1>
 <p>This directory contains the source code for all 1.X releases of NCX-Core</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/source/NCX-Core><- Back</a></p>
+<p><a href=/source/NCX-Core>&lt;- Back</a></p>
 <hr>
 <h4>2020-06-14 - v1.0 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.0.zip>NCX-Core-v1.0.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.0.msi>Binaries</a> [W] (Released as v1.0)</h4>
 <hr>
