--- a/source/NCX-Core/3.X/index.html
+++ b/source/NCX-Core/3.X/index.html
@@ -12,7 +12,7 @@
 <h1>List of sources for NCX-Core v3</h1>
 <p>This directory contains the source code for all 3.X releases of NCX-Core</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/source/NCX-Core><- Back</a></p>
+<p><a href=/source/NCX-Core>&lt;- Back</a></p>
 <hr>
 <h4>2020-10-14 - v0814ad8/v3.0-beta - <a href=/source/NCX-Core/3.X/NCX-Core-v3.0-b1.zip>NCX-Core-v3.0-b1.zip</a> | <a href=/source/NCX-Core/3.X/NCX-Core-Setup-v3.0-b1.msi>Binaries</a> [W] (Released as v3.0 Beta 1)</h4>
 <hr>
