--- a/source/NCX-Core-Lite/0.X/index.html
+++ b/source/NCX-Core-Lite/0.X/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<title>NCX Programming Source Site</title>
-<link rel="icon" type="image/png" href="/icon.png"/>
-<meta property="og:title" content="NCX Programming">
-<meta property="og:locale" content="en_US">
-<meta name="description" content="NCX Programming's Official Source Site">
-<meta property="og:description" content="NCX Programming's Official Source Site">
-<link rel="canonical" href="https://ncx-programming.github.io/src">
-<meta property="og:url" content="https://ncx-programming.github.io/src">
-<meta property="og:site_name" content="NCX Programming Source Site">
-<meta property="og:image" content="https://ncxprogramming.com/icon.png">
-<h1>List of sources for NCX-Core-Lite v0</h1>
-<p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
-<p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/source/NCX-Core-Lite>&lt;- Back</a></p>
-<hr>
-<h4>2021-03-06 - v0.1 - <a href=/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>NCX-Core-Lite-v0.1.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
-<hr>
-<h4>2021-03-22 - v0.2 - <a href=/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.2.zip>NCX-Core-Lite-v0.2.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
-<hr>
+<html lang="en">
+<head>
+  <title>NCX Programming Source Site</title>
+  <link rel="icon" type="image/png" href="/icon.png"/>
+  <meta property="og:title" content="NCX Programming">
+  <meta property="og:locale" content="en_US">
+  <meta name="description" content="NCX Programming's Official Source Site">
+  <meta property="og:description" content="NCX Programming's Official Source Site">
+  <link rel="canonical" href="https://ncx-programming.github.io/src">
+  <meta property="og:url" content="https://ncx-programming.github.io/src">
+  <meta property="og:site_name" content="NCX Programming Source Site">
+  <meta property="og:image" content="https://ncxprogramming.com/icon.png">
+</head>
+<body>
+  <h1>List of sources for NCX-Core-Lite v0</h1>
+  <p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
+  <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
+  <p><a href=/source/NCX-Core-Lite>&lt;- Back</a></p>
+  <hr>
+  <h4>2021-03-06 - v0.1 - <a href=/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>NCX-Core-Lite-v0.1.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
+  <hr>
+  <h4>2021-03-22 - v0.2 - <a href=/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.2.zip>NCX-Core-Lite-v0.2.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
+  <hr>
+</body>
+<html>
