--- a/source/CSharpCollection/index.html
+++ b/source/CSharpCollection/index.html
@@ -13,18 +13,12 @@
   <meta property="og:image" content="https://ncxprogramming.com/icon.png">
 </head>
 <body>
-  <h1>Welcome to the NCX Programming source storage site.</h1>
-  <p>Source code is available for the following programs:</p>
+  <h1>Version groups for the CSharpCollection</h1>
+  <p><a href="/">&lt;- Back</a></p>
   <hr>
-  <h4><a href=/source/CSharpCollection>CSharpCollection</a> - Source available starting with v1.0</h4>
+  <h4><a href=/source/CSharpCollection/1.X/>v1.X</a> (Versions starting with 1)</h4>
   <hr>
-  <h4><a href=/source/fake-apt/all>fake-apt</a> - Source available for all major commits</h4>
-  <hr>
-  <h4><a href=/source/NCX-Core>NCX-Core</a> - Source available starting with v1.0</h4>
-  <hr>
-  <h4><a href=/source/NCX-Core-Lite>NCX-Core-Lite</a> - Source available starting with v0.1</h4>
-  <hr>
-  <h4><a href=/source/theVaultC/all>theVaultC</a> - Source available starting with R1</h4>
+  <h4><a href=/source/CSharpCollection/2.X/>v2.X</a> (Versions starting with 2)</h4>
   <hr>
 </body>
-</html>
+<html>
