--- a/source/CSharpCollection/1.X/index.html
+++ b/source/CSharpCollection/1.X/index.html
@@ -20,11 +20,11 @@
   <hr>
   <h4>2020-05-23 - v1.0 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.0-source.zip>CSharpCollection-v1.0-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.0-bin.zip>Binaries</a> [W] (Released as v1.0)</h4>
   <hr>
-  <h4>2020-06-03 - v1.1 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-source.zip>CSharpCollection-v1.1-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-bin.msi>Binaries</a> [W] (Released as v1.1)</h4>
+  <h4>2020-06-03 - v1.1 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-source.zip>CSharpCollection-v1.1-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-bin.zip>Binaries</a> [W] (Released as v1.1)</h4>
   <hr>
-  <h4>2020-06-05 - v1.2 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-source.zip>CSharpCollection-v1.2-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-bin.msi>Binaries</a> [W] (Released as v1.2)</h4>
+  <h4>2020-06-05 - v1.2 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-source.zip>CSharpCollection-v1.2-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-bin.zip>Binaries</a> [W] (Released as v1.2)</h4>
   <hr>
-  <h4>2020-06-06 - v1.3 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-source.zip>CSharpCollection-v1.3-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-bin.msi>Binaries</a> [W] (Released as v1.3)</h4>
+  <h4>2020-06-06 - v1.3 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-source.zip>CSharpCollection-v1.3-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-bin.zip>Binaries</a> [W] (Released as v1.3)</h4>
   <hr>
   <h4>End of 1.X Releases. <a href=/source/CSharpCollection/2.X/>View 2.X releases</a>.</h4>
   <hr>
