Adjusted file names for NCX-Core 1.X & 2.X to work towards naming consistancy

--- a/source/NCX-Core/1.X/index.html
+++ b/source/NCX-Core/1.X/index.html
@@ -18,17 +18,17 @@
   <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
   <p><a href=/source/NCX-Core>&lt;- Back</a></p>
   <hr>
-  <h4>2020-06-14 - v1.0 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.0.zip>NCX-Core-v1.0.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.0.msi>Binaries</a> [W] (Released as v1.0)</h4>
+  <h4>2020-06-14 - v1.0 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.0-source.zip>NCX-Core-v1.0-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.0-setup.msi>Binaries</a> [W] (Released as v1.0)</h4>
   <hr>
-  <h4>2020-06-14 - v1.1 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.1.zip>NCX-Core-v1.1.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.1.msi>Binaries</a> [W] (Released as v1.1)</h4>
+  <h4>2020-06-14 - v1.1 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.1-source.zip>NCX-Core-v1.1-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.1-setup.msi>Binaries</a> [W] (Released as v1.1)</h4>
   <hr>
-  <h4>2020-06-15 - v1.2 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.2.zip>NCX-Core-v1.2.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.2.msi>Binaries</a> [W] (Released as v1.2)</h4>
+  <h4>2020-06-15 - v1.2 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.2-source.zip>NCX-Core-v1.2-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.2-setup.msi>Binaries</a> [W] (Released as v1.2)</h4>
   <hr>
-  <h4>2020-06-23 - v1.3 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.3.zip>NCX-Core-v1.3.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.3.msi>Binaries</a> [W] (Released as v1.3)</h4>
+  <h4>2020-06-23 - v1.3 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.3-source.zip>NCX-Core-v1.3-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.3-setup.msi>Binaries</a> [W] (Released as v1.3)</h4>
   <hr>
-  <h4>2020-06-23 - v1.4 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.4.zip>NCX-Core-v1.4.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.4.msi>Binaries</a> [W] (Released as v1.4)</h4>
+  <h4>2020-06-23 - v1.4 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.4-source.zip>NCX-Core-v1.4-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.4-setup.msi>Binaries</a> [W] (Released as v1.4)</h4>
   <hr>
-  <h4>2020-06-24 - v1.5 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.5.zip>NCX-Core-v1.5.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-Setup-v1.5.msi>Binaries</a> [W] (Released as v1.5)</h4>
+  <h4>2020-06-24 - v1.5 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.5-source.zip>NCX-Core-v1.5-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.5-setup.msi>Binaries</a> [W] (Released as v1.5)</h4>
   <hr>
   <h4>End of 1.X Releases. <a href=/source/NCX-Core/2.X/>View 2.X releases</a>.</h4>
   <hr>
