Added CSS to change the font

--- a/source/fake-apt/index.html
+++ b/source/fake-apt/index.html
@@ -6,4 +6,5 @@
 <meta property="og:url" content="https://ncx-programming.github.io/src">
 <meta property="og:site_name" content="NCX Programming Source Site">
 <meta property="og:image" content="https://ncxprogramming.com/icon.png">
+<link rel="stylesheet" type="text/css" href="/CSS/style.css">
 <p>i- wha- how did you get here</p>
