--- a/source/theVaultC/all/index.html
+++ b/source/theVaultC/all/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>NCX Programming Source Site</title>
   <link rel="icon" type="image/png" href="/icon.png"/>
+  <link rel="stylesheet" type="text/css" href="/CSS/style.css">
   <meta property="og:title" content="NCX Programming">
   <meta property="og:locale" content="en_US">
   <meta name="description" content="NCX Programming's Official Source Site">
