Added RNGTool Swift page link to home page

--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
     <hr>
     <h4><a href=/source/theVaultC/all>theVaultC</a> - Source available starting with R1</h4>
     <hr>
+    <h4><a href=/source/RNGTool-Swift>RNGTool-Swift</a> - Source unavailable, binaries only</h4>
+    <hr>
   </body>
 </html>
