--- a/source/RNGTool/index.html
+++ b/source/RNGTool/index.html
@@ -14,10 +14,10 @@
   <meta property="og:image" content="https://ncxprogramming.com/icon.png">
 </head>
 <body>
-  <h1>Version groups for RNGTool Swift</h1>
+  <h1>Version groups for RNGTool</h1>
   <p><a href="/">&lt;- Back</a></p>
   <hr>
-  <h4><a href=/source/RNGTool-Swift/1.X/>v1.X</a> (Versions starting with 1)</h4>
+  <h4><a href=/source/RNGTool/1.X/>v1.X</a> (Versions starting with 1)</h4>
   <hr>
 </body>
 <html>
