--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -14,13 +14,16 @@
   <meta property="og:image" content="https://ncxprogramming.com/icon.png">
 </head>
 <body>
-  <h1>List of sources for RNGTool Swift v1</h1>
-  <p>This directory contains the source code for all 1.X releases of RNGTool Swift</p>
-  <p>All versions are for macOS 10.15+ only.</p>
+  <h1>List of sources for RNGTool v1</h1>
+  <p>This directory contains the source code for all 1.X releases of RNGTool</p>
+  <p>v1.0 is macOS 10.15+ only.</p>
+  <p>v1.1+ is macOS 11.3+ only.</p>
   <p>The source code for RNGTool is currently not available. As soon as it is, downloads will be added here.</p>
-  <p><a href=/source/RNGTool-Swift>&lt;- Back</a></p>
+  <p><a href=/source/RNGTool>&lt;- Back</a></p>
   <hr>
-  <h4>2020-08-27 - v1.0 (29) - <a href=/source/RNGTool-Swift/1.X/RNGTool-Swift-Installer-v1.0.dmg>RNGTool-Swift-Installer-v1.0.dmg</a> (Released as v1.0 build 29)</h4>
+  <h4>2021-08-27 - v1.0 (29) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.0.dmg>RNGTool-Installer-v1.0.dmg</a> (Released as v1.0 build 29)</h4>
+  <hr>
+  <h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.x/RNGTool-Installer-v1.1.dmg>RNGTool-Installer-v1.1.dmg</a> (Released as v1.1 build 48)</h4>
   <hr>
 </body>
 </html>
