--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -23,7 +23,7 @@
   <hr>
   <h4>2021-08-27 - v1.0 (29) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.0.dmg>RNGTool-Installer-v1.0.dmg</a> (Released as v1.0 build 29)</h4>
   <hr>
-  <h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.x/RNGTool-Installer-v1.1.dmg>RNGTool-Installer-v1.1.dmg</a> (Released as v1.1 build 48)</h4>
+  <h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.1.dmg>RNGTool-Installer-v1.1.dmg</a> (Released as v1.1 build 48)</h4>
   <hr>
 </body>
 </html>
