--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -25,5 +25,7 @@
   <hr>
   <h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.1.dmg>RNGTool-Installer-v1.1.dmg</a> (Released as v1.1 build 48)</h4>
   <hr>
+  <h4>2021-08-31 - v1.1.1 (50) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.1.1.dmg>RNGTool-Installer-v1.1.1.dmg</a> (Released as v1.1.1 build 50)</h4>
+  <hr>
 </body>
 </html>
