--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -27,5 +27,7 @@
   <hr>
   <h4>2021-08-31 - v1.1.1 (50) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.1.1.dmg>RNGTool-Installer-v1.1.1.dmg</a> (Released as v1.1.1 build 50)</h4>
   <hr>
+  <h4>2021-08-31 - v1.2 (56) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.2.dmg>RNGTool-Installer-v1.2.dmg</a> (Released as v1.2 build 56)</h4>
+  <hr>
 </body>
 </html>
