Added note about RNGTool source

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <hr>
     <h4><a href=/source/theVaultC/all>theVaultC</a> - Source available starting with R1</h4>
     <hr>
-    <h4><a href=/source/RNGTool>RNGTool</a> - Source unavailable, binaries only</h4>
+    <h4><a href=/source/RNGTool>RNGTool</a> - Source unavailable (but coming soon!), binaries only</h4>
     <hr>
   </body>
 </html>
