Added source for RNGTool v1.4

--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -15,23 +15,23 @@
 </head>
 <body>
   <h1>List of sources for RNGTool v1</h1>
-  <p>This directory contains the source code for all 1.X releases of RNGTool</p>
+  <p>This directory contains the source code for all 1.X releases of RNGTool, starting with v1.4</p>
   <p>v1.0 is macOS 10.15+ only.</p>
   <p>v1.1+ is macOS 11.3+ only.</p>
   <p>The source code for RNGTool is currently not available. As soon as it is, downloads will be added here.</p>
   <p><a href=/source/RNGTool>&lt;- Back</a></p>
   <hr>
-  <h4>2021-08-27 - v1.0 (29) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.0.dmg>RNGTool-Installer-v1.0.dmg</a> (Released as v1.0 build 29)</h4>
+  <h4>2021-08-27 - v1.0 (29) - <a href=/source/RNGTool/1.X/RNGTool-v1.0-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.0 build 29)</h4>
   <hr>
-  <h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.1.dmg>RNGTool-Installer-v1.1.dmg</a> (Released as v1.1 build 48)</h4>
+  <h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.X/RNGTool-v1.1-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.1 build 48)</h4>
   <hr>
-  <h4>2021-08-31 - v1.1.1 (50) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.1.1.dmg>RNGTool-Installer-v1.1.1.dmg</a> (Released as v1.1.1 build 50)</h4>
+  <h4>2021-08-31 - v1.1.1 (50) - <a href=/source/RNGTool/1.X/RNGTool-v1.1.1-installer.dmg>RNGTool-v1.1.1-installer.dmg</a> (Released as v1.1.1 build 50)</h4>
   <hr>
-  <h4>2021-09-05 - v1.2 (56) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.2.dmg>RNGTool-Installer-v1.2.dmg</a> (Released as v1.2 build 56)</h4>
+  <h4>2021-09-05 - v1.2 (56) - <a href=/source/RNGTool/1.X/RNGTool-v1.2-installer.dmg>RNGTool-v1.2-installer.dmg</a> (Released as v1.2 build 56)</h4>
   <hr>
-  <h4>2021-09-05 - v1.3 (79) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.3.dmg>RNGTool-Installer-v1.3.dmg</a> (Released as v1.3 build 79)</h4>
+  <h4>2021-09-05 - v1.3 (79) - <a href=/source/RNGTool/1.X/RNGTool-v1.3-installer.dmg>RNGTool-v1.3-installer.dmg</a> (Released as v1.3 build 79)</h4>
   <hr>
-  <h4>2021-09-06 - v1.4 (86) - <a href=/source/RNGTool/1.X/RNGTool-Installer-v1.4.dmg>RNGTool-Installer-v1.4.dmg</a> (Released as v1.4 build 86)</h4>
+  <h4>2021-09-06 - v1.4 (86) - <a href=/source/RNGTool/1.X/RNGTool-v1.4-source.zip>RNGTool-v1.4-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.4-installer.dmg>Binaries</a> (Released as v1.4 build 86)</h4>
   <hr>
 </body>
 </html>
