Finished adding RNGTool v1.5

--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -32,5 +32,7 @@
   <hr>
   <h4>2021-09-06 - v1.4 (86) - <a href=/source/RNGTool/1.X/RNGTool-v1.4-source.zip>RNGTool-v1.4-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.4-installer.dmg>Binaries</a> (Released as v1.4 build 86)</h4>
   <hr>
+  <h4>2021-09-23 - v1.5 (106) - <a href=/source/RNGTool/1.X/RNGTool-v1.5-source.zip>RNGTool-v1.5-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.5-installer.dmg>Binaries</a> (Released as v1.5 build 106)</h4>
+  <hr>
 </body>
 </html>
