--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -34,5 +34,7 @@
   <hr>
   <h4>2021-09-23 - v1.5 (106) - <a href=/source/RNGTool/1.X/RNGTool-v1.5-source.zip>RNGTool-v1.5-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.5-installer.dmg>Binaries</a> (Released as v1.5 build 106)</h4>
   <hr>
+  <h4>2021-09-27 - v1.6 (142) - <a href=/source/RNGTool/1.X/RNGTool-v1.6-source.zip>RNGTool-v1.6-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.6-installer.dmg>Binaries</a> (Released as v1.6 build 142)</h4>
+  <hr>
 </body>
 </html>
