Set up Jekyll to vastly improve the site layout, also added a nav bar

--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -1,40 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>NCX Programming Source Site</title>
-  <link rel="icon" type="image/png" href="/icon.png"/>
-  <link rel="stylesheet" type="text/css" href="/CSS/style.css">
-  <meta property="og:title" content="NCX Programming">
-  <meta property="og:locale" content="en_US">
-  <meta name="description" content="NCX Programming's Official Source Site">
-  <meta property="og:description" content="NCX Programming's Official Source Site">
-  <link rel="canonical" href="https://ncx-programming.github.io/src">
-  <meta property="og:url" content="https://ncx-programming.github.io/src">
-  <meta property="og:site_name" content="NCX Programming Source Site">
-  <meta property="og:image" content="https://ncxprogramming.com/icon.png">
-</head>
-<body>
-  <h1>List of sources for RNGTool v1</h1>
-  <p>This directory contains the source code for all 1.X releases of RNGTool, starting with v1.4</p>
-  <p>v1.0 is macOS 10.15+ only.</p>
-  <p>v1.1+ is macOS 11.3+ only.</p>
-  <p><a href=/source/RNGTool>&lt;- Back</a></p>
-  <hr>
-  <h4>2021-08-27 - v1.0 (29) - <a href=/source/RNGTool/1.X/RNGTool-v1.0-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.0 build 29)</h4>
-  <hr>
-  <h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.X/RNGTool-v1.1-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.1 build 48)</h4>
-  <hr>
-  <h4>2021-08-31 - v1.1.1 (50) - <a href=/source/RNGTool/1.X/RNGTool-v1.1.1-installer.dmg>RNGTool-v1.1.1-installer.dmg</a> (Released as v1.1.1 build 50)</h4>
-  <hr>
-  <h4>2021-09-05 - v1.2 (56) - <a href=/source/RNGTool/1.X/RNGTool-v1.2-installer.dmg>RNGTool-v1.2-installer.dmg</a> (Released as v1.2 build 56)</h4>
-  <hr>
-  <h4>2021-09-05 - v1.3 (79) - <a href=/source/RNGTool/1.X/RNGTool-v1.3-installer.dmg>RNGTool-v1.3-installer.dmg</a> (Released as v1.3 build 79)</h4>
-  <hr>
-  <h4>2021-09-06 - v1.4 (86) - <a href=/source/RNGTool/1.X/RNGTool-v1.4-source.zip>RNGTool-v1.4-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.4-installer.dmg>Binaries</a> (Released as v1.4 build 86)</h4>
-  <hr>
-  <h4>2021-09-23 - v1.5 (106) - <a href=/source/RNGTool/1.X/RNGTool-v1.5-source.zip>RNGTool-v1.5-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.5-installer.dmg>Binaries</a> (Released as v1.5 build 106)</h4>
-  <hr>
-  <h4>2021-09-27 - v1.6 (142) - <a href=/source/RNGTool/1.X/RNGTool-v1.6-source.zip>RNGTool-v1.6-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.6-installer.dmg>Binaries</a> (Released as v1.6 build 142)</h4>
-  <hr>
-</body>
-</html>
+---
+title: RNGTool v1
+layout: default
+---
+
+<h1>List of sources for RNGTool v1</h1>
+<p>This directory contains the source code for all 1.X releases of RNGTool, starting with v1.4</p>
+<p>v1.0 is macOS 10.15+ only.</p>
+<p>v1.1+ is macOS 11.3+ only.</p>
+<p><a href=/source/RNGTool>&lt;- Back</a></p>
+<hr>
+<h4>2021-08-27 - v1.0 (29) - <a href=/source/RNGTool/1.X/RNGTool-v1.0-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.0 build 29)</h4>
+<hr>
+<h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.X/RNGTool-v1.1-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.1 build 48)</h4>
+<hr>
+<h4>2021-08-31 - v1.1.1 (50) - <a href=/source/RNGTool/1.X/RNGTool-v1.1.1-installer.dmg>RNGTool-v1.1.1-installer.dmg</a> (Released as v1.1.1 build 50)</h4>
+<hr>
+<h4>2021-09-05 - v1.2 (56) - <a href=/source/RNGTool/1.X/RNGTool-v1.2-installer.dmg>RNGTool-v1.2-installer.dmg</a> (Released as v1.2 build 56)</h4>
+<hr>
+<h4>2021-09-05 - v1.3 (79) - <a href=/source/RNGTool/1.X/RNGTool-v1.3-installer.dmg>RNGTool-v1.3-installer.dmg</a> (Released as v1.3 build 79)</h4>
+<hr>
+<h4>2021-09-06 - v1.4 (86) - <a href=/source/RNGTool/1.X/RNGTool-v1.4-source.zip>RNGTool-v1.4-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.4-installer.dmg>Binaries</a> (Released as v1.4 build 86)</h4>
+<hr>
+<h4>2021-09-23 - v1.5 (106) - <a href=/source/RNGTool/1.X/RNGTool-v1.5-source.zip>RNGTool-v1.5-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.5-installer.dmg>Binaries</a> (Released as v1.5 build 106)</h4>
+<hr>
+<h4>2021-09-27 - v1.6 (142) - <a href=/source/RNGTool/1.X/RNGTool-v1.6-source.zip>RNGTool-v1.6-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.6-installer.dmg>Binaries</a> (Released as v1.6 build 142)</h4>
+<hr>
