--- a/source/CSharpCollection/1.X/index.html
+++ b/source/CSharpCollection/1.X/index.html
@@ -1,33 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>NCX Programming Source Site</title>
-  <link rel="icon" type="image/png" href="/icon.png"/>
-  <link rel="stylesheet" type="text/css" href="/CSS/style.css">
-  <meta property="og:title" content="NCX Programming">
-  <meta property="og:locale" content="en_US">
-  <meta name="description" content="NCX Programming's Official Source Site">
-  <meta property="og:description" content="NCX Programming's Official Source Site">
-  <link rel="canonical" href="https://ncx-programming.github.io/src">
-  <meta property="og:url" content="https://ncx-programming.github.io/src">
-  <meta property="og:site_name" content="NCX Programming Source Site">
-  <meta property="og:image" content="https://ncxprogramming.com/icon.png">
-</head>
-<body>
-  <h1>List of sources for CSharpCollection v1</h1>
-  <p>This directory contains the source code for all 1.X releases of the CSharpCollection</p>
-  <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-  <p><a href=/source/CSharpCollection>&lt;- Back</a></p>
-  <hr>
-  <h4>2020-05-23 - v1.0 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.0-source.zip>CSharpCollection-v1.0-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.0-bin.zip>Binaries</a> [W] (Released as v1.0)</h4>
-  <hr>
-  <h4>2020-06-03 - v1.1 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-source.zip>CSharpCollection-v1.1-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-bin.zip>Binaries</a> [W] (Released as v1.1)</h4>
-  <hr>
-  <h4>2020-06-05 - v1.2 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-source.zip>CSharpCollection-v1.2-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-bin.zip>Binaries</a> [W] (Released as v1.2)</h4>
-  <hr>
-  <h4>2020-06-06 - v1.3 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-source.zip>CSharpCollection-v1.3-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-bin.zip>Binaries</a> [W] (Released as v1.3)</h4>
-  <hr>
-  <h4>End of 1.X Releases. <a href=/source/CSharpCollection/2.X/>View 2.X releases</a>.</h4>
-  <hr>
-</body>
-</html>
+---
+title: CSharpCollection v1
+layout: default
+---
+
+<h1>List of sources for CSharpCollection v1</h1>
+<p>This directory contains the source code for all 1.X releases of the CSharpCollection</p>
+<p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
+<p><a href=/source/CSharpCollection>&lt;- Back</a></p>
+<hr>
+<h4>2020-05-23 - v1.0 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.0-source.zip>CSharpCollection-v1.0-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.0-bin.zip>Binaries</a> [W] (Released as v1.0)</h4>
+<hr>
+<h4>2020-06-03 - v1.1 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-source.zip>CSharpCollection-v1.1-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.1-bin.zip>Binaries</a> [W] (Released as v1.1)</h4>
+<hr>
+<h4>2020-06-05 - v1.2 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-source.zip>CSharpCollection-v1.2-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.2-bin.zip>Binaries</a> [W] (Released as v1.2)</h4>
+<hr>
+<h4>2020-06-06 - v1.3 - <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-source.zip>CSharpCollection-v1.3-source.zip</a> | <a href=/source/CSharpCollection/1.X/CSharpCollection-v1.3-bin.zip>Binaries</a> [W] (Released as v1.3)</h4>
+<hr>
+<h4>End of 1.X Releases. <a href=/source/CSharpCollection/2.X/>View 2.X releases</a>.</h4>
+<hr>
