--- a/source/NCX-Core/index.html
+++ b/source/NCX-Core/index.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>NCX Programming Source Site</title>
-  <link rel="icon" type="image/png" href="/icon.png"/>
-  <link rel="stylesheet" type="text/css" href="/CSS/style.css">
-  <meta property="og:title" content="NCX Programming">
-  <meta property="og:locale" content="en_US">
-  <meta name="description" content="NCX Programming's Official Source Site">
-  <meta property="og:description" content="NCX Programming's Official Source Site">
-  <link rel="canonical" href="https://ncx-programming.github.io/src">
-  <meta property="og:url" content="https://ncx-programming.github.io/src">
-  <meta property="og:site_name" content="NCX Programming Source Site">
-  <meta property="og:image" content="https://ncxprogramming.com/icon.png">
-</head>
-<body>
-  <h1>Version groups for NCX-Core</h1>
-  <p><a href="/">&lt;- Back</a></p>
-  <hr>
-  <h4><a href=/source/NCX-Core/1.X/>v1.X</a> (Versions starting with 1)</h4>
-  <hr>
-  <h4><a href=/source/NCX-Core/2.X/>v2.X</a> (Versions starting with 2)</h4>
-  <hr>
-  <h4><a href=/source/NCX-Core/3.X/>v3.X</a> (Versions starting with 3)</h4>
-  <hr>
-</body>
-<html>
+---
+title: NCX-Core
+layout: default
+---
+
+<h1>Version groups for NCX-Core</h1>
+<p><a href="/">&lt;- Back</a></p>
+<hr>
+<h4><a href=/source/NCX-Core/1.X/>v1.X</a> (Versions starting with 1)</h4>
+<hr>
+<h4><a href=/source/NCX-Core/2.X/>v2.X</a> (Versions starting with 2)</h4>
+<hr>
+<h4><a href=/source/NCX-Core/3.X/>v3.X</a> (Versions starting with 3)</h4>
+<hr>
