--- a/source/theVaultC/all/index.html
+++ b/source/theVaultC/all/index.html
@@ -1,31 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>NCX Programming Source Site</title>
-  <link rel="icon" type="image/png" href="/icon.png"/>
-  <link rel="stylesheet" type="text/css" href="/CSS/style.css">
-  <meta property="og:title" content="NCX Programming">
-  <meta property="og:locale" content="en_US">
-  <meta name="description" content="NCX Programming's Official Source Site">
-  <meta property="og:description" content="NCX Programming's Official Source Site">
-  <link rel="canonical" href="https://ncx-programming.github.io/src">
-  <meta property="og:url" content="https://ncx-programming.github.io/src">
-  <meta property="og:site_name" content="NCX Programming Source Site">
-  <meta property="og:image" content="https://ncxprogramming.com/icon.png">
-</head>
-<body>
-  <h1>List of sources for fake-apt</h1>
-  <p>Since theVaultC doesn't have normal version numbers, these are the sources that correspond with releases. A version.txt file is included that says what versions of theVaultC programs the source is for.</p>
-  <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-  <p><a href="/">&lt;- Back</a></p>
-  <hr>
-  <h4>2021-02-24 - Release 1 - <a href=/source/theVaultC/all/theVaultC-r1-source.zip>theVaultC-r1-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r1-bin.zip>Binaries</a> [L] [W] (Released as Release 1)</h4>
-  <hr>
-  <h4>2021-02-24 - Release 2 - <a href=/source/theVaultC/all/theVaultC-r2-source.zip>theVaultC-r2-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r2-bin.zip>Binaries</a> [M] [L] [W] (Released as Release 2)</h4>
-  <hr>
-  <h4>2021-02-25 - Release 3 - <a href=/source/theVaultC/all/theVaultC-r3-source.zip>theVaultC-r3-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r3-bin.zip>Binaries</a> [M] [L] [W] (Released as Release 3)</h4>
-  <hr>
-  <h4>2021-06-17 - Release 4 - <a href=/source/theVaultC/all/theVaultC-r4-source.zip>theVaultC-r4-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r4-bin.zip>Binaries</a> [M] [L] [W] (Released as Release 4)</h4>
-  <hr>
-</body>
-</html>
+---
+title: theVaultC
+layout: default
+---
+
+<h1>List of sources for fake-apt</h1>
+<p>Since theVaultC doesn't have normal version numbers, these are the sources that correspond with releases. A version.txt file is included that says what versions of theVaultC programs the source is for.</p>
+<p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
+<p><a href="/">&lt;- Back</a></p>
+<hr>
+<h4>2021-02-24 - Release 1 - <a href=/source/theVaultC/all/theVaultC-r1-source.zip>theVaultC-r1-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r1-bin.zip>Binaries</a> [L] [W] (Released as Release 1)</h4>
+<hr>
+<h4>2021-02-24 - Release 2 - <a href=/source/theVaultC/all/theVaultC-r2-source.zip>theVaultC-r2-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r2-bin.zip>Binaries</a> [M] [L] [W] (Released as Release 2)</h4>
+<hr>
+<h4>2021-02-25 - Release 3 - <a href=/source/theVaultC/all/theVaultC-r3-source.zip>theVaultC-r3-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r3-bin.zip>Binaries</a> [M] [L] [W] (Released as Release 3)</h4>
+<hr>
+<h4>2021-06-17 - Release 4 - <a href=/source/theVaultC/all/theVaultC-r4-source.zip>theVaultC-r4-source.zip</a> | <a href=/source/theVaultC/all/theVaultC-r4-bin.zip>Binaries</a> [M] [L] [W] (Released as Release 4)</h4>
+<hr>
