--- a/source/NCX-Core/1.X/index.html
+++ b/source/NCX-Core/1.X/index.html
@@ -6,19 +6,9 @@ layout: default
 <h1>List of sources for NCX-Core v1</h1>
 <p>This directory contains the source code for all 1.X releases of NCX-Core</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/source/NCX-Core>&lt;- Back</a></p>
+<p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
-<h4>2020-06-14 - v1.0 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.0-source.zip>NCX-Core-v1.0-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.0-setup.msi>Binaries</a> [W] (Released as v1.0)</h4>
-<hr>
-<h4>2020-06-14 - v1.1 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.1-source.zip>NCX-Core-v1.1-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.1-setup.msi>Binaries</a> [W] (Released as v1.1)</h4>
-<hr>
-<h4>2020-06-15 - v1.2 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.2-source.zip>NCX-Core-v1.2-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.2-setup.msi>Binaries</a> [W] (Released as v1.2)</h4>
-<hr>
-<h4>2020-06-23 - v1.3 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.3-source.zip>NCX-Core-v1.3-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.3-setup.msi>Binaries</a> [W] (Released as v1.3)</h4>
-<hr>
-<h4>2020-06-23 - v1.4 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.4-source.zip>NCX-Core-v1.4-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.4-setup.msi>Binaries</a> [W] (Released as v1.4)</h4>
-<hr>
-<h4>2020-06-24 - v1.5 - <a href=/source/NCX-Core/1.X/NCX-Core-v1.5-source.zip>NCX-Core-v1.5-source.zip</a> | <a href=/source/NCX-Core/1.X/NCX-Core-v1.5-setup.msi>Binaries</a> [W] (Released as v1.5)</h4>
-<hr>
-<h4>End of 1.X Releases. <a href=/source/NCX-Core/2.X/>View 2.X releases</a>.</h4>
-<hr>
+{% for item in site.data.ncxcorev1 %}
+  <h4>{{ item.date }} - v1.{{ item.name }} - <a href="/source/NCX-Core/1.X/NCX-Core-v1.{{ item.name }}-source.zip">NCX-Core-v1.{{ item.name }}-source.zip</a> | <a href="/source/NCX-Core/1.X/NCX-Core-v1.{{ item.name }}-setup.msi">Binaries</a> [{{ item.platform }}] (Released as v1.{{ item.name }})</h4>
+  <hr>
+{% endfor %}
