--- a/source/NCX-Core/3.X/index.html
+++ b/source/NCX-Core/3.X/index.html
@@ -6,15 +6,9 @@ layout: default
 <h1>List of sources for NCX-Core v3</h1>
 <p>This directory contains the source code for all 3.X releases of NCX-Core</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/source/NCX-Core>&lt;- Back</a></p>
+<p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
-<h4>2020-10-14 - v0814ad8/v3.0-beta - <a href=/source/NCX-Core/3.X/NCX-Core-v3.0-b1.zip>NCX-Core-v3.0-b1.zip</a> | <a href=/source/NCX-Core/3.X/NCX-Core-Setup-v3.0-b1.zip>Binaries</a> [W] (Released as v3.0 Beta 1)</h4>
-<hr>
-<h4>2020-11-13 - vebaeb57/v3.0-rc - <a href=/source/NCX-Core/3.X/NCX-Core-v3.0-rc.zip>NCX-Core-v3.0-rc.zip</a> | <a href=/source/NCX-Core/3.X/NCX-Core-Setup-v3.0-rc.zip>Binaries</a> [W] (Released as v3.0 Release Candidate)</h4>
-<hr>
-<h4>2020-11-22 - v3.0 - <a href=/source/NCX-Core/3.X/NCX-Core-v3.0.zip>NCX-Core-v3.0.zip</a> | <a href=/source/NCX-Core/3.X/NCX-Core-Setup-v3.0.zip>Binaries</a> [W] (Released as v3.0)</h4>
-<hr>
-<h4>2021-06-04 - v39aa8e7/v3.1-beta - <a href=/source/NCX-Core/3.X/NCX-Core-v3.1-b1.zip>NCX-Core-v3.1-b1.zip</a> | <a href=/source/NCX-Core/3.X/NCX-Core-Setup-v3.1-b1.zip>Binaries</a> [W] (Released as v3.1 Beta-Core)</h4>
-<hr>
-<h4>2021-06-04 - v3.1 - <a href=/source/NCX-Core/3.X/NCX-Core-v3.1.zip>NCX-Core-v3.1.zip</a> | <a href=/source/NCX-Core/3.X/NCX-Core-Setup-v3.1.zip>Binaries</a> [W] (Released as v3.1)</h4>
-<hr>
+{% for item in site.data.ncxcorev3 %}
+  <h4>{{ item.date }} - v3.{{ item.name }} - <a href="/source/NCX-Core/3.X/NCX-Core-v3.{{ item.name }}-source.zip">NCX-Core-v3.{{ item.name }}-source.zip</a> | <a href="/source/NCX-Core/3.X/NCX-Core-v3.{{ item.name }}-setup.zip">Binaries</a> [{{ item.platform }}] (Released as v3.{{ item.name }})</h4>
+  <hr>
+{% endfor %}
