Removed unnecessary data

--- a/source/NCX-Core/2.X/index.html
+++ b/source/NCX-Core/2.X/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <h1>List of sources for NCX-Core v2</h1>
 <p>This directory contains the source code for all 2.X releases of NCX-Core</p>
-<p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
+<p>NCX-Core only compiles for Windows</p>
 <p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
 {% for item in site.data.ncxcorev2 %}
