--- a/source/NCX-Core/1.X/index.html
+++ b/source/NCX-Core/1.X/index.html
@@ -5,10 +5,10 @@ layout: default
 
 <h1>List of sources for NCX-Core v1</h1>
 <p>This directory contains the source code for all 1.X releases of NCX-Core</p>
-<p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
+<p>NCX-Core only compiles for Windows</p>
 <p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
 {% for item in site.data.ncxcorev1 %}
-  <h4>{{ item.date }} - v1.{{ item.name }} - <a href="/source/NCX-Core/1.X/NCX-Core-v1.{{ item.name }}-source.zip">NCX-Core-v1.{{ item.name }}-source.zip</a> | <a href="/source/NCX-Core/1.X/NCX-Core-v1.{{ item.name }}-setup.msi">Binaries</a> [{{ item.platform }}] (Released as v1.{{ item.name }})</h4>
+  <h4>{{ item.date }} - v1.{{ item.name }} - <a href="/source/NCX-Core/1.X/NCX-Core-v1.{{ item.name }}-source.zip">NCX-Core-v1.{{ item.name }}-source.zip</a> | <a href="/source/NCX-Core/1.X/NCX-Core-v1.{{ item.name }}-setup.msi">Binaries</a> (Released as v1.{{ item.name }})</h4>
   <hr>
 {% endfor %}
