Remove references to now deleted data

--- a/source/NCX-Core/3.X/index.html
+++ b/source/NCX-Core/3.X/index.html
@@ -9,6 +9,6 @@ layout: default
 <p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
 {% for item in site.data.ncxcorev3 %}
-  <h4>{{ item.date }} - v3.{{ item.name }} - <a href="/source/NCX-Core/3.X/NCX-Core-v3.{{ item.name }}-source.zip">NCX-Core-v3.{{ item.name }}-source.zip</a> | <a href="/source/NCX-Core/3.X/NCX-Core-v3.{{ item.name }}-setup.zip">Binaries</a> [{{ item.platform }}] (Released as v3.{{ item.name }})</h4>
+  <h4>{{ item.date }} - v3.{{ item.name }} - <a href="/source/NCX-Core/3.X/NCX-Core-v3.{{ item.name }}-source.zip">NCX-Core-v3.{{ item.name }}-source.zip</a> | <a href="/source/NCX-Core/3.X/NCX-Core-v3.{{ item.name }}-setup.zip">Binaries</a> (Released as v3.{{ item.name }})</h4>
   <hr>
 {% endfor %}
