Removed more unnecessary data

--- a/source/CSharpCollection/1.X/index.html
+++ b/source/CSharpCollection/1.X/index.html
@@ -8,6 +8,6 @@ layout: default
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
 <p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 {% for item in site.data.csharpcollectionv1 %}
-  <h4>{{ item.date }} - v1.{{ item.name }} - <a href="/source/CSharpCollection/1.X/{{ item.src }}">{{ item.src }}</a> | <a href="/source/CSharpCollection/1.X/{{ item.bin }}">Binaries</a> [{{ item.platform }}] (Released as v1.{{ item.name }})</h4>
+  <h4>{{ item.date }} - v1.{{ item.name }} - <a href="/source/CSharpCollection/1.X/{{ item.src }}">{{ item.src }}</a> | <a href="/source/CSharpCollection/1.X/{{ item.bin }}">Binaries</a> (Released as v1.{{ item.name }})</h4>
   <hr>
 {% endfor %}
