--- a/source/CSharpCollection/2.X/index.html
+++ b/source/CSharpCollection/2.X/index.html
@@ -9,6 +9,6 @@ layout: default
 <p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
 {% for item in site.data.csharpcollectionv2 %}
-  <h4>{{ item.date }} - v2.{{ item.name }} - <a href="/source/CSharpCollection/2.X/CSharpCollection-v2.{{ item.name }}-source.zip">CSharpCollection-v2.{{ item.name }}-source.zip</a> | <a href="/source/CSharpCollection/2.X/CSharpCollection-v2.{{ item.name }}-bin.zip">Binaries</a> [{{ item.platform }}] (Released as v2.{{ item.name }})</h4>
+  <h4>{{ item.date }} - v2.{{ item.name }} - <a href="/source/CSharpCollection/2.X/CSharpCollection-v2.{{ item.name }}-source.zip">CSharpCollection-v2.{{ item.name }}-source.zip</a> | <a href="/source/CSharpCollection/2.X/CSharpCollection-v2.{{ item.name }}-bin.zip">Binaries</a> (Released as v2.{{ item.name }})</h4>
   <hr>
 {% endfor %}
